Fix layout issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,21 @@
     color: white;
 }
 
-html, body { height: 100%; margin: 0; }
+html, body {
+  margin: 0;
+  padding: 0;
+  min-height: 100dvh;
+}
 
-body { display: flex; 
+body { 
+    display: flex; 
     flex-direction: column;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.295),rgb(32, 139, 112)); }
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.295),rgb(32, 139, 112)); 
+}
 
-main { flex: 1; /* pushes footer to the bottom */ }
+main{
+    flex: 1;
+}
 
 header { 
     width: 100%;
@@ -20,6 +28,7 @@ header {
     align-items: center; /* centers vertically */
     background-color: rgba(0, 0, 0, 0.5);
 }
+
 h1{
     text-shadow: 0 0 80px black;
     background-color: rgba(0, 0, 0, 0.103);
@@ -88,7 +97,7 @@ button:active{
 
 .timeButton{
     height: 100%;
-    width: 20%;
+    width: 22%;
     border-radius: 5px;
     margin: 0px;
     padding: 0px;
